test/syc/good/paren.c
/*
 * Parenthesized expression
 */

int res;
int a;

void paren(void)
{
	res = (a);
}
