test/syc/bad/argident.c
/*
 * Argument identifier missing.
 */

void f(int *)
{
}
